--- a/languages/sh/bash.org
+++ b/languages/sh/bash.org
@@ -1,3 +1,4 @@
+- "Destructuring" with *read* https://stackoverflow.com/questions/1952404/linux-bash-multiple-variable-assignment
 - Haskell like in cli https://github.com/gelisam/hawk
 - https://www.mulle-kybernetik.com/modern-bash-scripting/
 - https://github.com/dylanaraps/pure-bash-bible
